[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "aiohttp==3.8.3",
    "aiosignal==1.2.0",
    "async-timeout==4.0.2",
    "attrs==22.1.0",
    "beautifulsoup4==4.11.1",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "distlib==0.3.6",
    "filelock==3.8.0",
    "frozenlist==1.3.1",
    "geoip2==4.6.0",
    "idna==3.4",
    "jmespath==1.0.1",
    "jsonschema==4.17.0",
    "maxminddb==2.2.0",
    "multidict==6.0.2",
    "platformdirs==2.5.2",
    "progress==1.6",
    "pyrsistent==0.19.2",
    "requests==2.28.1",
    "soupsieve==2.3.2.post1",
    "urllib3==1.26.12",
    "virtualenv==20.16.6",
    "yarl==1.8.1"
]
build-backend = "setuptools.build_meta"