[metadata]
name = tg_ip_lookup
version = 0.0.1
author = Twingate Labs
author_email = labs@twingate.com
description = Find out which public cloud an IP address originates from.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Twingate-Labs/tg-ip-lookup
project_urls =
    Bug Tracker = https://github.com/Twingate-Labs/tg-ip-lookup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
